--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,16 @@
+body {
+    background-color: #333;
+    color: #f8f8f2;
+}
+
+a {
+    color: #f8f8f2;
+}
+
+.disabled {
+    color: #555;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
