--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         {% for image in images %}
         <li>
             <a href="/images/{{ image }}" target="_blank">
-            <img src="/images/{{ image }}" alt="{{ image }}">
+            <img class="image-card" src="/images/{{ image }}" alt="{{ image }}">
             <!-- <div class="overlay"><span>Image title</span></div> -->
             </a>
         </li>
